# rndl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pytest_led_strip.py  pytest_rndl.py  sdkconfig.debug  sdkconfig.defaults
assets/: rndl.pdn
components/rndl/: CMakeLists.txt  Rndl.h  __init__.py  color.c  led_encoder.c  led_panel_driver.c  rndl_color.c  rndl_led_panel_driver.c  rndl_surface.c  surface.c
components/rndl/include/rndl/: color.h  platform.h  utils.h
components/rndl/include/rndl/graphics/: bitmap.h  circle.h  line.h  point.h  rect.h  surface.h
components/rndl/include/rndl/led_driver/: led_driver.h  led_encoder.h  led_panel_driver.h
components/rndl_ble/: CMakeLists.txt  ble_pixel_service.c
components/rndl_ble/include/rndl_ble/: ble_pixel_service.h
main/: CMakeLists.txt  Kconfig.projbuild  font_8x8_basic.c  main.c  platform.c  platform.h  rndl_mqtt.c  rndl_mqtt.h  utils.h
main/color/: color.c  color.h
main/example/: example.h  example_bitmap.c  example_bitmap_data.c  example_extent.c  example_lines.c  example_raindrops.c  example_rectangle.c
main/examples/: example_extent.c  example_lines.c  example_raindrops.c  example_rectangle.c
main/graphics/: line.h  rect.h  surface.c  surface.h
main/led_driver/: led_driver.h  led_encoder.c  led_panel_driver.c  led_panel_driver.h
main/renderer/: line.h  point.h  rect.h  surface.c  surface.h
panel/: pyproject.toml
panel/src/rndl_panel/: bench.py  cli.py  common.py  daemon.py  font.py  probe.py
panel/src/rndl_panel/sources/: __init__.py  base.py  caltrain.py
