[project]
name = "rndl-panel"
version = "0.1.0"
description = "Host-side tools for streaming framebuffer content to the rndl LED panel over BLE"
requires-python = ">=3.9"
dependencies = [
    "bleak>=0.21",
    "httpx>=0.27",
]

[project.scripts]
rndl-panel = "rndl_panel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rndl_panel"]
